--- a/templates/form.html
+++ b/templates/form.html
@@ -12,10 +12,22 @@
 
 
 <form action="/data" method = "POST">
-    <p>What is your gender? <input type = "text" name = "gender" /></p>
+    <p>What is your gender?</p>
+        <label>
+        <input type="radio" name="gender" value="male" checked>Male</label>
+      <br>
+      <label>
+        <input type="radio" name="gender" value="female">Female</label> 
     <p>What is current weight: <input type = "number" name = "weight" /></p>
     <p>What is your height in inches : <input type = "number" name = "height" /></p>
     <p>Please state your age:<input type = "number" name = "age" </p>
-    <p>How active are you? Write unactive if you dont workout or are relatively seditary, lighlty active if you work out lightly 1-3 days a week, moderately active if your working out or playing sport or work a physicaly demanding job 3-5days a week, active if you are working out 6-7 days a week, or very active if you work out intesively for 7 days a week.<input type = "text" name = "activity"</p>
+    <label for="activity">Please chose the level of your activity: unactive, 1-3 days of light workouts lightly active, active for moderate working out 1-4 days a week, active for 3-5 days of working out, and 5-7 days of rigourous working out select very active </label>
+    <select name="activity" id="activity">
+        <option value="unactive">Unactive</option>
+        <option value="lightly active">Lightly Active</option>
+        <option value="moderately active">Moderately Active</option>
+        <option value="active">Active</option>
+        <option value="very active">Very Active</option>
+    </select>
     <p><input type = "submit" value = "Submit" /></p>
 </form>
