I have added the tracking aspect of the project, currently fixing the data html to display user data

--- a/templates/caloric_estimate.html
+++ b/templates/caloric_estimate.html
@@ -3,9 +3,12 @@
 
 <h3>if you would like to track your progress moving forward please put click on tracker button bellow! </h3>
 
-  <label>
-      <input type="radio" name="no" value="home" checked>No</label>
-    <br>
-  <label>
-      <input type="radio" name="yes" value="tracker.html">Tracker</label> 
+<form action="/tracker" method = "POST">
 
+  <a href="/tracker">Track Progress</a>
+  <br>
+  <h3>Other wise you may return to home!</h3>
+  <a href="/home">Home</a>
+
+
+</form>
