--- a/templates/data.html
+++ b/templates/data.html
@@ -1,4 +1,18 @@
-{% for key,value in form_data.items() %}
-<h2> {{key}}</h2>
-<p> {{value}}</p>
-{% endfor %}
+<table id="table" >
+    <thead>
+      <tr>
+        <th>first</th>
+        <th>last</th>
+        <th>calories</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for row in form_data %}
+        <tr>
+          <td>{{ row[0] }}</td>
+          <td>{{ row[1] }}</td>
+          <td> {{row[2]}}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+</table>
