--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -1,6 +1,6 @@
-ssql = ssql + firstname + "', '" + lastname + "', '" + calories +"', '" + weight + "', '" + goal + "', '" + goal_progress + "', '" + timestamp +"')"
+<h1>Please fill out the following information to help track your progress!</h1> 
 
-<form action = "/data" method= "POST" >
+<form action = "/tracker" method= "POST" >
 <p>Please put in your first name: <input type = "text" name = "firstname" /></p>
 <p>Please put in your last name: <input type = "text" name = "lastname" /></p>
 <p>Please put in your current recommened caloric intake: <input type = "text" name = "calories" /></p>
@@ -9,5 +9,6 @@ ssql = ssql + firstname + "', '" + lastname + "', '" + calories +"', '" + weight
 <p>Record your current weight progress towards your goal. You can put a (-) or (+) before the number in order to record if the weight is going down or up.: <input type = "text" name = "goal_progress" /></p>
 <p>Now record your entry date for reference: <input type = "text" name = "timestamp" /></p>
 
-
+<p><input type = "submit" value = "Submit" /></p>
 </form>
+
