--- a/templates/data.html
+++ b/templates/data.html
@@ -4,6 +4,10 @@
         <th>first</th>
         <th>last</th>
         <th>calories</th>
+        <th>weight</th>
+        <th>goal</th>
+        <th>goalprogress</th>
+        <th>timestamp</th>
       </tr>
     </thead>
     <tbody>
@@ -11,7 +15,11 @@
         <tr>
           <td>{{ row[0] }}</td>
           <td>{{ row[1] }}</td>
-          <td> {{row[2]}}</td>
+          <td> {{row[2] }}</td>
+          <td>{{ row[3] }}</td>
+          <td>{{ row[4] }}</td>
+          <center><td>{{ row[5] }}</td></center>
+          <td>{{ row[6] }}</td>
         </tr>
       {% endfor %}
     </tbody>
